# ChangeLog for app-admin/hddtemp
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/hddtemp/ChangeLog,v 1.95 2011/05/08 15:05:43 spock Exp $

  08 May 2011; Michał Januszewski <spock@gentoo.org> files/hddgentoo.db:
  Two new entries in the HDD DB (bug #364509).

  08 Jan 2011; Michał Januszewski <spock@gentoo.org> files/hddgentoo.db:
  Add new drives to the Gentoo HDD DB (bug #350809).

  12 Dec 2010; Michał Januszewski <spock@gentoo.org> files/hddgentoo.db:
  New entries in the Gentoo HDD DB (bug #348441).

  28 Nov 2010; Michał Januszewski <spock@gentoo.org> files/hddgentoo.db:
  Add a new drive to the DB (bug #347015).

  11 Oct 2010; Michał Januszewski <spock@gentoo.org> files/hddgentoo.db:
  Add yet another drive to the db (submitted by Piotr Szymaniak).

  16 Aug 2010; Michał Januszewski <spock@gentoo.org> files/hddgentoo.db:
  Add a new drive to the database (bug #332887).

  26 Jul 2010; Michał Januszewski <spock@gentoo.org> files/hddgentoo.db:
  Add a new drive to the Gentoo HDD DB (bug #328473).

  05 Jul 2010; Michał Januszewski <spock@gentoo.org> files/hddgentoo.db:
  Add a new entry to the Gentoo HDD database.

  05 Jul 2010; Michał Januszewski <spock@gentoo.org>
  hddtemp-0.3_beta15-r4.ebuild, files/update-hddtemp.db:
  Display info about the gentoo HDD database in the ebuild. Make
  update-hddtemp.db try to fetch the latest version of the Gentoo database
  from the web. Thanks to Peter Gantner for these useful suggestions (bug
  #324563).

  23 Jun 2010; <spock@gentoo.org> files/hddgentoo.db:
  Add two additional hdd DB entries from bug #324213.

  23 Jun 2010; <spock@gentoo.org> files/hddgentoo.db:
  Add new entries to the hdd database (bug #324213).

  25 Mar 2010; Michał Januszewski <spock@gentoo.org> files/hddgentoo.db:
  New hdd DB entry (bug #309857).

  02 Mar 2010; Michał Januszewski <spock@gentoo.org> files/hddgentoo.db: