@@ -8,18 +8,18 @@ AUX hddtemp-0.3_beta15-iconv.patch 780 RMD160 b6209e93ec0db66eff2b12653cac020948
 AUX hddtemp-0.3_beta15-nls.patch 414 RMD160 85adfd2f30ddeed6ab147cc9f3e1c02bc5c1cbec SHA1 1814fa835a292870a754a21e86189a3acb9d3390 SHA256 c81efff92e3cd52257438b834df652cfea8535140fe8b67ebded14fd29c3dd9c
 AUX hddtemp-0.3_beta15-satacmds.patch 986 RMD160 445eb1a1c77738b0d62595a15955708c93310b16 SHA1 c81c89d0c8770aae5f667b5416e22c75518d122b SHA256 f3ae8ebd08d598cf9292d08e5fe07f54f894da7a90f02dcc9c46bb8d37afde56
 AUX hddtemp-conf.d 410 RMD160 0562571d46330a562768cfa6f0f071339ebd09a8 SHA1 3a642df90eb05bbd4524b622c58ce35b5f4dd4e8 SHA256 4b7b6793edbe54669965bf49dac95b273f128481aabe4b2b9e6c263f0e0a9ff5
-AUX hddtemp-init 547 RMD160 7387fd49f4f525ea82895c7fa1429a635abf7ace SHA1 f441e83730105a47055d7a78785ad126bd4e3745 SHA256 bf1253682d16fc54808451925bd001afe83a0dc3926a2250e00f986bf1a29f06
+AUX hddtemp-init 547 RMD160 cb15259fc0eb1eb31089761b08c6e2c929ec2bf3 SHA1 8c3a9757193e607c2e03e19385e0af5a918fda75 SHA256 9a59bb7e8a1724930374d1188cb892f31da8099629051efbde7193dc25abb0e1
 AUX update-hddtemp.db 827 RMD160 16ec8df20d3d9a88327fa0e5c5b7bc1b9f1fe787 SHA1 688ba8d088b8544a5667d257dd91b18aeb384217 SHA256 696bfaae093464f8b6c65254c3eb086d0113f728f3eaeadf4a6247630742f761
 DIST hddtemp-0.3-beta15.tar.bz2 256372 RMD160 82b6affbbb14d23b5a8f3fecf3fff7acc0bd9def SHA1 65393b0a4d9862c030c81702d95c1acd00da275b SHA256 618541584054093d53be8a2d9e81c97174f30f00af91cb8700a97e442d79ef5b
 DIST hddtemp-20080531.db.bz2 5627 RMD160 42b4bbb04dcecaf65d9cd34eba650161a7fd45b8 SHA1 8091b4aa0dd814ffe2847383ae49b7e39c7326f3 SHA256 6a12bb68283c3224bef2ab086ae810b3f6b17b38f8203350acb3a73e21a6dfbd
 EBUILD hddtemp-0.3_beta15-r3.ebuild 2159 RMD160 eebfd6e2d03bfa0261c21c989ed07ad03a853b2f SHA1 1b22087d1837502143e9e6cb2647c5130d40c256 SHA256 a9c5bb67332862cc46e4b450878d686376e26367e1392f0994f49a45dbc1c468
-EBUILD hddtemp-0.3_beta15-r4.ebuild 2393 RMD160 82a8711eea8a40eff5084dddfa2c5c94e6f8502d SHA1 75e2880473107180e324491cba88a5cbcdbcf1e2 SHA256 85442a61e7e27c30b22659e458de754e9b5acae9f331488ffe076103317eac95
-MISC ChangeLog 14989 RMD160 c9903a53ac5dfb48ca343892f5bc64216a808a85 SHA1 42064bb937c27b7294c44ff3d501caaa2eecb745 SHA256 adc43e905bb9fa14c16bb7e74cf1984babd32e990d0cdddb5e87cdc28461918b
+EBUILD hddtemp-0.3_beta15-r4.ebuild 2632 RMD160 2a01bb1143dd6f4908a4db91fb4d56c75194e928 SHA1 fb3f1e6d26140cafa10043482c5fe07205033929 SHA256 d924dc022fec6e46dd463ead969ab514ea45cca2060dc937ef61e247436d7ed3
+MISC ChangeLog 15159 RMD160 f5560891af2d9fca14595c1cfa89ef440ee129dd SHA1 a33d3d2d57722695cf56ea5d531be25507ee796e SHA256 1fe98e32acef333a3fda457320b29144b3a5632afe74b7fa6bf4f0df3cafe7ed
 MISC metadata.xml 310 RMD160 f39a7464f5cbe15490a4e6868d1fbfd3d168c361 SHA1 e0baa9db48f51a55c64a692206b37ab21f63f8a5 SHA256 a850370c8d6b3dc1717db3baa1d7c3b36630dca172f9f27b7967e0f03b416855
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk3GsWEACgkQchej4aZK9/eZiACfQ1+KU6l6fe1AR4DQdd0skOfj
-GjMAn0u2rgfuFPAjCOCuoZD28ysNsKeh
-=nmqG
+iEYEARECAAYFAk30vKgACgkQchej4aZK9/eaogCfZrg0lfNiDtlnA4FbXqYyZbSd
+nt4An3uhHHmmFEhXg3Q/VNfTWRoDrmLb
+=9vZw
 -----END PGP SIGNATURE-----
