@@ -1,7 +1,7 @@
 #!/sbin/runscript
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/hddtemp/files/hddtemp-init,v 1.5 2008/06/08 14:36:40 spock Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/hddtemp/files/hddtemp-init,v 1.6 2011/06/12 13:18:20 spock Exp $
 
 depend() {
 	need localmount net
