@@ -1,6 +1,10 @@
 # ChangeLog for app-admin/hddtemp
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/hddtemp/ChangeLog,v 1.95 2011/05/08 15:05:43 spock Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/hddtemp/ChangeLog,v 1.96 2011/06/12 13:18:20 spock Exp $
+
+  12 Jun 2011; Michał Januszewski <spock@gentoo.org>
+  hddtemp-0.3_beta15-r4.ebuild, files/hddtemp-init:
+  Add info message about the loopback interface (bug #329763).
 
   08 May 2011; Michał Januszewski <spock@gentoo.org> files/hddgentoo.db:
   Two new entries in the HDD DB (bug #364509).
